Fix chatbox view on mobile by adding margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
     background-color: #ffffff;
     overflow: hidden;
     padding: 20px;
+    margin: 20px;
 }
 
 h1 {
@@ -155,9 +156,8 @@ button:active {
     .chatbox {
         width: 100%;
         padding: 15px;
-        margin: 0;
+        margin: 15px;
         height: 100vh;
-        /* Utiliser toute la hauteur */
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -169,7 +169,6 @@ button:active {
 
     .chat-messages {
         height: calc(100% - 200px);
-        /* Laisse assez de place pour le titre et les champs d'entrée */
         margin-bottom: 10px;
     }
 
@@ -198,7 +197,7 @@ button:active {
     .chatbox {
         width: 100%;
         padding: 10px;
-        margin: 0;
+        margin: 10px;
         height: 100vh;
         display: flex;
         flex-direction: column;
